--- a/shared/code/Makefile
+++ b/shared/code/Makefile
@@ -2,3 +2,6 @@ current_dir := $(shell pwd)
 
 setup-env:
 	PIPENV_VENV_IN_PROJECT=1 pipenv install --three -d
+
+test:
+	pipenv run pytest tests -s -vvv $(current_dir)/tests/
