--- a/shared/workspace/Makefile
+++ b/shared/workspace/Makefile
@@ -7,8 +7,14 @@ SLS=npx sls -s $(STAGE) -r $(REGION) -v
 setup-env:
 	PIPENV_VENV_IN_PROJECT=1 pipenv install --three -d
 
+test:
+	pipenv run pytest tests -s -vvv $(current_dir)/tests/
+
 package:
 	$(SLS) package
 
 deploy:
 	$(SLS) deploy
+
+destroy:
+	$(SLS) destroy
